clusters/vcluster-ci/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines-resolvers
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-workspace
